feat: Update aggregation logic